<resources>
    <string name="app_name">КиноПоиск</string>
    <string name="text_onboarding">Узнавай о премьерах</string>
    <string name="text_onboarding_2">Создавай коллекции</string>
    <string name="text_onboarding_3">Делись с друзьями</string>
    <string name="text_next">Пропустить</string>
    <string name="title_movie">Название фильма</string>
    <string name="genres_movie">Жанр</string>
    <string name="country_movie">Страна</string>
    <string name="rating_movie">Рейтинг</string>
    <string name="text_premiers">Премьеры</string>
    <string name="text_thrillers">Триллеры</string>
    <string name="top_list">Топ  </string>
    <string name="tv_series">Сериалы </string>
    <string name="text_best">Лучшее</string>
    <string name="text_all">Все </string>
    <string name="text_exit">Выход </string>
    <string name="text_list">К списку </string>
    <string name="text_actors">В фильме снимались </string>
    <string name="text_similars">Похожие фильмы </string>
    <string name="text_filmography">Фильмография </string>
    <string name="text_gallery">Галерея </string>
    <string name="text_worked_on_the_film">Над фильмом работали</string>
    <string name="name_text">Имя актера</string>
    <string name="description_text">Имя героя</string>
    <string name="profession_text">Профессия</string>
    <string name="text_viewed">Просмотрено</string>
    <string name="text_collections">Коллекции</string>
    <string name="text_you_were_wondering">Вам было интересно</string>
    <string name="text_add_my_collections">Создать свою коллекцию</string>
    <string name="text_like">Любимые</string>
    <string name="text_search_no_result">К сожалению, по Вашему запросу ничего не найдено</string>
    <string name="text_search_setting">Настройки поиска</string>
    <string name="text_search_period">Период</string>
    <string name="text_search_period_up">Искать в период с:</string>
    <string name="text_search_period_up_year">Укажите год начала поиска</string>
    <string name="text_search_period_to_year">Укажите год окончания поиска</string>
    <string name="text_search_period_to">Искать в период до:</string>
    <string name="text_search_hint">Искать...</string>
    <string name="text_save_bn">Сохранить</string>
    <string name="text_show">Показывать</string>
    <string name="text_country_def">Россия</string>
    <string name="text_country">Страна</string>
    <string name="text_genre">Жанр</string>
    <string name="text_year">Год</string>
    <string name="text_rating">Рейтинг</string>
    <string name="text_sort">Сортировать</string>
    <string name="text_choose_the_country">Выберите страну</string>
    <string name="text_choose_the_genre">Выберите жанр</string>
    <string name="text_share">Привет, посмотрите этот замечательный фильм:</string>
    <string name="type_share">text/plain</string>
    <string name="title_share">Поделиться с:</string>




    <string name="title_home">Дом</string>
    <string name="title_search">Поиск</string>
    <string name="title_profile">Профиль</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>

</resources>